Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ pool:
 
 variables:
   buildConfiguration: 'Release'
-  solution: 'CineAPI/CineAPI.csproj'
+  solution: 'cine.sln'
 
 steps:
 - task: UseDotNet@2
